GEODE-8530: Fix for coredump during tx commit

Client is fixed in a way that ignores all regions enlisted within
transaction that client doesn't have configured. This behavior is
aligned with the java client, since same thing is done there.