cppcache/src/RegionCommit.cpp
@@ -51,9 +51,14 @@ void RegionCommit::apply(Cache* cache) {
   for (auto& entryOp : m_farSideEntryOps) {
     auto region = cache->getRegion(m_regionPath->value().c_str());
     if (region == nullptr && m_parentRegionPath != nullptr) {
-      region = cache->getRegion(m_parentRegionPath->value().c_str());
+      std::string parentRegionPath = m_parentRegionPath->value().c_str();
+      if (!parentRegionPath.empty()) {
+        region = cache->getRegion(parentRegionPath);
+      }
     }
-    std::static_pointer_cast<FarSideEntryOp>(entryOp)->apply(region);
+    if (region != nullptr) {
+      std::static_pointer_cast<FarSideEntryOp>(entryOp)->apply(region);
+    }
   }
 }
 
